...
    var body: some View {
        NavigationStack {
            GameBackgroundView {
                contentViewBasedOnViewState
                    .animation(.easeInOut, value: viewModel.showAnswer)
            }
            .navigationTitle("Who's That Pokemon?")
            .navigationBarTitleDisplayMode(.inline)
        }
        .onAppear {
            viewModel.loadGame()
        }
    }
...
    private var pokemonOptionsView: some View {
        PokemonOptionsView(viewModel: viewModel)
    }
    
    /// Load next character view
    private var nextPokemonView: some View {
        ButtonView(name: "Next Pokemon") {
            viewModel.selectRandomPokemonCharacter()
        }
        .frame(width: 200, height: 50)
        .buttonStyle(.borderedProminent)
    }
}
...
